fixed contrasts of blue colors

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -54,7 +54,7 @@ a:visited {
     padding: 6px;
     margin: 5px;
     border-radius: 5px;
-    background: rgba(49, 118, 224, 0.5);
+    background: rgba(49, 118, 224, 0.6);
     color: white;
 }
 
